Login page + Moved to full TypeScript

--- a/TorchioAntico/package.json
+++ b/TorchioAntico/package.json
@@ -12,10 +12,14 @@
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^1.0.0",
+    "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.12.0",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "@types/js-cookie": "^2.2.6",
     "element-ui": "^2.13.2",
-    "nuxt": "^2.14.0"
+    "js-cookie": "^2.2.1",
+    "nuxt": "^2.14.0",
+    "vue-sweetalert2": "^3.0.8"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.0",
@@ -25,6 +29,7 @@
     "@nuxtjs/eslint-module": "^2.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.5.0",
-    "eslint-plugin-nuxt": "^1.0.0"
+    "eslint-plugin-nuxt": "^1.0.0",
+    "vuex-module-decorators": "^0.17.0"
   }
 }
