--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "bootstrap-vue": "^2.16.0",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.5",
+    "nuxt-vuex-localstorage": "^1.2.7",
     "vue-sweetalert2": "^3.0.8"
   },
   "devDependencies": {
