--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,9 @@
     "core-js": "^3.6.5",
     "nuxt": "^2.14.5",
     "nuxt-vuex-localstorage": "^1.2.7",
-    "vue-sweetalert2": "^3.0.8"
+    "vue-country-region-select": "^2.0.14",
+    "vue-sweetalert2": "^3.0.8",
+    "vue-tel-input": "^4.4.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
