--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
+    "node-fetch": "^2.6.1",
     "request": "^2.88.2",
     "sequelize": "^5.22.3"
   }
