--- a/client/package.json
+++ b/client/package.json
@@ -17,9 +17,11 @@
     "@nuxtjs/pwa": "^3.0.2",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.16.0",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.5",
     "nuxt-vuex-localstorage": "^1.2.7",
+    "vue-chartjs": "^3.5.1",
     "vue-country-region-select": "^2.0.14",
     "vue-sweetalert2": "^3.0.8",
     "vue-tel-input": "^4.4.0"
