--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,10 @@
     "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.5",
+    "nuxt-leaflet": "0.0.22",
     "nuxt-vuex-localstorage": "^1.2.7",
+    "swiper": "^6.3.5",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-chartjs": "^3.5.1",
     "vue-country-region-select": "^2.0.14",
     "vue-sweetalert2": "^3.0.8",
