--- a/server/.env
+++ b/server/.env
@@ -28,7 +28,7 @@ DB_NAME=torchioantico
 DB_USER=root
 
 # Database user's password
-DB_PASSWORD=
+DB_PASSWORD=root
 
 # Database dialect (supported: mariadb, mysql, sqlite, postgres, mssql)
 # Learn more: https://sequelize.org/v5/manual/dialects.html
