Added database port to config file

--- a/server/.env
+++ b/server/.env
@@ -30,6 +30,9 @@ DB_USER=root
 # Database user's password
 DB_PASSWORD=root
 
+# Database connection port
+DB_PORT=3306
+
 # Database dialect (supported: mariadb, mysql, sqlite, postgres, mssql)
 # Learn more: https://sequelize.org/v5/manual/dialects.html
 DB_DIALECT=mysql
