--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Al Torchio Antico official PWA back-end",
   "main": "src/app.js",
   "scripts": {
-    "start": "export NODE_ENV=production && node src/app.js",
+    "start": "node src/app.js",
     "dev": "nodemon --trace-warnings src/app.js"
   },
   "keywords": [
