--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TorchioAntico-PWA",
+  "name": "torchioantico-pwa",
   "version": "1.0.0",
   "description": "Sito ufficiale del hotel-ristorante Al Torchio Antico di Arzo",
   "private": true,
