--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.13.1",
+    "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/moment": "^1.6.1",
     "@nuxtjs/pwa": "^3.3.5",
     "bootstrap": "^4.6.0",
@@ -22,6 +23,7 @@
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3",
     "nuxt-leaflet": "^0.0.25",
+    "redirect-ssl": "^3.0.0",
     "swiper": "^6.6.2",
     "vue-awesome-swiper": "^4.1.1",
     "vue-carousel-3d": "^1.0.1",
