--- a/client/package.json
+++ b/client/package.json
@@ -32,11 +32,11 @@
     "vue-cookie-law": "^1.13.3",
     "vue-gallery-slideshow": "^1.5.2",
     "vue-sweetalert2": "^4.3.1",
-    "vue-tel-input": "^5.3.0"
+    "vue-tel-input": "^5.3.0",
+    "@nuxtjs/eslint-config": "^6.0.0",
+    "@nuxtjs/eslint-module": "^3.0.2"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "^6.0.0",
-    "@nuxtjs/eslint-module": "^3.0.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.22.0",
     "eslint-plugin-nuxt": "^2.0.0",
