--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.13.1",
-    "@nuxtjs/google-analytics": "^2.4.0",
+    "@nuxtjs/eslint-config": "^6.0.0",
+    "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/google-gtag": "^1.0.4",
     "@nuxtjs/moment": "^1.6.1",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/robots": "^2.5.0",
@@ -31,10 +33,9 @@
     "vue-chartjs": "^3.5.1",
     "vue-cookie-law": "^1.13.3",
     "vue-gallery-slideshow": "^1.5.2",
+    "vue-server-renderer": "2.6.13",
     "vue-sweetalert2": "^4.3.1",
-    "vue-tel-input": "^5.3.0",
-    "@nuxtjs/eslint-config": "^6.0.0",
-    "@nuxtjs/eslint-module": "^3.0.2"
+    "vue-tel-input": "^5.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
